[metadata]
name = easy-proxy-broker
version = 0.0.1
author = Ehsan Abdekhodaie
author_email = ehsabd@outlook.com
description = An easy-to-use proxy broker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ehsabd/easy-proxy-broker
project_urls =
    Bug Tracker = https://github.com/ehsabd/easy-proxy-broker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
requires = 
    proxybroker
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5.3

[options.packages.find]
where = src
